# BMusic

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json  双击启动播放器.bat  启动播放器.bat
.github/workflows/: tauri-build.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  portable_update.rs
src/components/: Player.tsx  PlaylistConfig.tsx  SongList.tsx  StatsDashboard.tsx
src/utils/: pagination.ts  playback.ts  playbackHistory.ts  playlistImport.ts  storage.ts
tests/: core.test.ts
