[package]
name = "bili-randomizer"
version = "1.0.5"
description = "BiliRandomizer B站歌单融合随机播放器"
authors = ["AI Coding Assistant"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

[profile.release]
panic = "abort" # Strip expensive panic infrastructure
codegen-units = 1 # Optimize for size/speed
lto = true # Link-time optimization
opt-level = "s" # Optimize for binary size
strip = true # Strip symbols and debug info
