[package]
name = "bili-randomizer"
version = "1.0.6"
description = "BiliRandomizer B站收藏夹融合随机播放器"
authors = ["BiliRandomizer contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
keyring = { version = "3", features = ["windows-native"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
